<resources>
    <string name="app_name">TouristMap</string>
    <string name="logo">Logo</string>
    <string name="acceder">Acceder</string>
    <string name="iniciarsesion">Iniciar Sesión</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Acceder</string>
    <string name="AppTitle">Tourist Map</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta? &lt;b&gt;Regístrate aquí&lt;/b&gt;</string>
    <string name="createac">Regístrate</string>
    <string name="cerrar_session">Cerrar Session</string>
    <string name="ir_al_mapa">Ir al Mapa</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="google">Google</string>
    <string name="inicio">Inicio</string>
    <string name="mapa">Mapa</string>
    <string name="m_todo_de_acceso">Método de Acceso</string>
    <string name="profilephoto">profilephoto</string>
    <string name="author">Autor</string>
    <string name="comment">Comentario...</string>
    <string name="place_name">Nombre...</string>
    <string name="write_your_review">Escribe tu review aquí...</string>
    <string name="publish_review">Publicar Review</string>
    <string name="usuario">Usuario</string>
    <string name="en_nombre_del_lugar">en Nombre del Lugar</string>
    <string name="review">Reseña</string>
    <string name="new_Review">Nueva Publicación</string>
    <string name="question1">¿Qué lugar visitaste?</string>
</resources>
